--- a/quiz.html
+++ b/quiz.html
@@ -434,7 +434,7 @@
             {
                 question: "The maximum number of parentheses that appear on the stack at any one time when analyzing (()(())(())) is:",
                 options: ["1", "2", "3", "4 or more"],
-                answer: 3 // 4 or more
+                answer: 2
             },
             {
                 question: "What is the value of the postfix expression 6 3 2 4 + - * ?",
@@ -444,7 +444,7 @@
             {
                 question: "The maximum number of symbols that will appear on the stack at one time during the conversion of 4 + 3*(6*3-12) from infix to postfix notation is:",
                 options: ["1", "2", "3", "4"],
-                answer: 2 // 3
+                answer: 3
             },
             {
                 question: "The data structure required to check whether an expression contains balanced parentheses is:",
@@ -489,7 +489,7 @@
             {
                 question: "The result of evaluating the postfix expression 5 4 6 + * 4 9 3 / + * is:",
                 options: ["600", "350", "650", "588"],
-                answer: 0 // 600
+                answer: 1
             },
             {
                 question: "Convert the infix expression (A+B^D)/(E-F)+G to postfix:",
