--- a/quiz.html
+++ b/quiz.html
@@ -454,7 +454,7 @@
             {
                 question: "The postfix form of the expression (A+B)*(C*D-E)*F/G is:",
                 options: ["AB+CD*E-FG/**", "AB+CD*E-F**G/", "AB+CD*E-*F*G/", "AB+CDE*-*F*G/"],
-                answer: 0 // AB+CD*E-FG/**
+                answer: 2 
             },
             {
                 question: "The process of accessing data stored in a serial access memory is similar to manipulating data on a:",
