--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo Quiz</title>
+    <title> Quizzes</title>
     <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg">
     <style>
         body {
